--- a/index1.html
+++ b/index1.html
@@ -78,13 +78,21 @@
                 <button id="enviarFormFindCep">Find Cep</button>
             </form>
         </div>
-        <div class="container2"></div>
+        <div class="container2">
+            <div class="imgContainer">
+                <img src="./imgs/img.png" alt="certificação">
+            </div>
+            <div id="cepResult">
+                <label>CEP: <label id="showCep">test</label> </label>
+                <span class="material-symbols-outlined">
+                content_copy
+                </span>
+                
+            </div>
+        </div>
     </section>
 
     
-    <!-- ICONE COPIA <span class="material-symbols-outlined">
-        content_copy
-        </span> -->
 
 </body>
 </html>
