Third frame concluded

--- a/frame2.html
+++ b/frame2.html
@@ -31,16 +31,19 @@
             </div>
             <div class="box2">
                 <button>Botão</button>
-                <a href="##">Encontrar CEP por endereço</a>
+                <a href="./index1.html">Encontrar CEP por endereço</a>
             </div>
         </section>
         <section class="contChild2">
             <div class="box3">
-                <img src="A" alt="imagem café mae tem café">
+                <img src="./imgs/maeTemCafeh.png" alt="imagem café mae tem café" class="imgBack">
+                <!-- <img src="./imgs/mail-enviado.png" alt="Gio" class="imgSobre"> -->
             </div>
             <div class="box4">
                 <div class="result">
-                    <img src="./imgs/copy1.png" alt="">
+                    <a href="">
+                    <img src="./imgs/copy1.png" alt="" class="imgCopy">
+                    </a>
                     <ul class="ulRes">
                         <li class="liRes">Logradouro: </li>
                         <li class="liRes">Bairro: </li>
