--- a/index1.html
+++ b/index1.html
@@ -75,7 +75,7 @@
                     
                 </div>
 
-                <button id="enviarFormFindCep">Find Cep</button>
+                <button id="enviarFormFindCep">Encontrar Cep</button>
             </form>
         </div>
         <div class="container2">
